Migrate deprecations and warnings